# github_stats_cli

./: .gitignore  EXAMPLES.md  LICENSE  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
src/github_stats_cli/: __init__.py  cli.py  client.py  display.py
tests/: test_client.py
